# GeneticAlgorithm

./: CMakeLists.txt  LICENSE  Post_processing.ipynb  Post_processing.py  Post_processing_animation.py  README.md  output.txt  output33unit.txt  output42unit.txt  requirements.txt
circuit_diagram/: circuit  original_circuit  updated_circuit
data/: genetic_cross_probability_0.7.csv  genetic_cross_probability_0.75.csv  genetic_cross_probability_0.85.csv  genetic_cross_probability_0.9.csv  genetic_cross_probability_0.95.csv  genetic_cross_probability_1.0.csv  genetic_cross_type_one-point.csv  genetic_cross_type_random.csv  genetic_cross_type_two-point.csv  genetic_mutation_rate_0.005.csv  genetic_mutation_rate_0.015.csv  genetic_mutation_rate_0.02.csv  genetic_mutation_rate_0.04.csv  genetic_population_size_200.csv  genetic_population_size_500.csv  genetic_population_size_5000.csv  genetic_stall_cross_probability_0.0.csv  genetic_stall_cross_probability_0.05.csv  genetic_stall_cross_probability_0.1.csv  genetic_stall_cross_probability_0.15.csv  genetic_stall_cross_probability_0.3.csv  genetic_stall_cross_probability_0.4.csv  genetic_stall_length_10.csv  genetic_stall_length_20.csv  genetic_stall_length_25.csv  genetic_stall_length_40.csv  genetic_stall_mutation_rate_0.1.csv  genetic_stall_mutation_rate_0.2.csv  genetic_stall_mutation_rate_0.3.csv  genetic_stall_mutation_rate_0.4.csv  genetic_stall_mutation_rate_0.6.csv  genetic_stall_mutation_rate_0.7.csv  (+3 more)
include/: CCircuit.h  (+3 more)
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  Genetic_Algorithm.cpp  main.cpp
(+6 files in other folders)
